--- a/src/components/NewCard.astro
+++ b/src/components/NewCard.astro
@@ -18,7 +18,7 @@ const {data} = Astro.props;
   <div>Workorder: {data.workorder}</div>
   <div>Owner: {data.owner}</div>
   <div>StartDate: {data.startdate}</div>
-  <div>CycleTiem: {data.days} days</div>
+  <div>CycleTime: {data.days} days</div>
 </div>
   <style>
     .card {
