--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,21 +4,22 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/1"
 );
-const datas = await response.json();
+const data = await response.json();
 // console.log(datas);
 // import type { APIRoute } from "astro";
 // import Link from "../components/ui/Link.astro";
 
-// export const GET: APIRoute = (datas) => {
-//   return new Response(
-//     JSON.stringify({
-//       message: "This was a GET!",
-//     })
-//   );
-// };
+import type { APIRoute } from "astro";
+export const GET: APIRoute = (data) => {
+  return new Response(
+    JSON.stringify({
+      message: "This was a GET!",
+    })
+  );
+};
 
 
-  if (!datas) {
+  if (!data) {
     return {
       status: 404,
     };
@@ -27,12 +28,12 @@ const datas = await response.json();
 
 ---
 <BaseLayout>
-  <div class="card-container">
-
-    {
-     datas.map((data:any) => (<NewCard data={data} />
-    ))}
-  </div>
+  <main class="card-container">
+  
+     {
+     data.map((data:any) => (<NewCard data={data} />
+     ))}
+   </main>
 </BaseLayout>
 
 
