--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,17 +1,15 @@
 ---
-import NewCard from "../components/NewCard.astro";
+import type { APIRoute } from "astro";
+import WorkCard from "../components/WorkCard.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
 const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/1"
 );
 const data = await response.json();
-// console.log(datas);
-// import type { APIRoute } from "astro";
-// import Link from "../components/ui/Link.astro";
 
-import type { APIRoute } from "astro";
 export const GET: APIRoute = (data) => {
   return new Response(
+    
     JSON.stringify({
       message: "This was a GET!",
     })
@@ -28,25 +26,28 @@ export const GET: APIRoute = (data) => {
 
 ---
 <BaseLayout>
-  <main class="card-container">
-  
-     {
-     data.map((data:any) => (<NewCard data={data} />
-     ))}
-   </main>
+ 
+  <main class="container mx-auto my-6 text-center">
+   
+    <div class="mt-10">
+      <h2 class="text-2xl font-semibold">功能介绍</h2>
+      <p class="mt-4 text-lg">在这里，您可以追踪和管理所有的工单，查看详细信息和状态更新。</p>
+      <ul class="mt-6 list-disc list-inside text-left mx-auto max-w-2xl">
+        <li class="mb-2">
+          <strong>工单创建与分配:</strong> 简单快捷地创建新工单，并将其分配给适当的团队成员。
+        </li>
+        <li class="mb-2">
+          <strong>实时状态更新:</strong> 实时跟踪工单的进展情况，确保所有相关人员及时了解最新状态。
+        </li>
+        <li class="mb-2">
+          <strong>历史记录与报告:</strong> 访问工单的历史记录，生成详细的报告，帮助分析和改进工作流程。
+        </li>
+        <li class="mb-2">
+          <strong>用户权限管理:</strong> 为不同用户分配不同的权限，确保数据安全和操作规范。
+        </li>
+      </ul>
+    </div>
+  </main>
 </BaseLayout>
 
 
-
-<style>
-  .card-container {
-      display: flex;
-      flex-wrap: wrap; /* 这里设置 flex-wrap: wrap; 让卡片容器可以换行 */
-      justify-content: space-between; /* 这里可以调整卡片在行内的对齐方式，我设置为 space-between，让卡片之间的间隔尽可能平均 */
-    }
-  
-</style>
-
-
-<!-- "https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/1" -->
-<!-- https://opensheet.elk.sh/1RLlHrz6x6Bp7Bijh8A-nKRCAOWIPk-uypuq0CVle6EQ/1 -->
