--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,8 +27,8 @@ const { title = "系统工单", description = "追踪" } = Astro.props;
       <h1 class="text-3xl font-bold">Work Order Tracking Board</h1>
       <nav class="mt-4">
         <a href="/" class="text-blue-300 hover:underline mx-2">Home</a>
-        <a href="/ie" class="text-blue-300 hover:underline mx-2">IE</a>
-        <a href="/me" class="text-blue-300 hover:underline mx-2">ME</a>
+        <a href="/ae" class="text-blue-300 hover:underline mx-2">AE</a>
+        <a href="/automatic" class="text-blue-300 hover:underline mx-2">Automatic</a>
       </nav>
     </header>
     <main class="container mx-auto my-6 flex-grow">
