--- a/src/pages/ae.astro
+++ b/src/pages/ae.astro
@@ -3,8 +3,7 @@ import type { APIRoute } from "astro";
 import WorkCard from "../components/WorkCard.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
 
-const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/1"
-);
+const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/4");
 const data = await response.json();
 
 export const GET: APIRoute = (data) => {
@@ -16,20 +15,26 @@ export const GET: APIRoute = (data) => {
   );
 };
 
-
+const filteredData = data.filter((item:any) => item.完成状态==="未完成").map((item: any) => ({
+    workorder:item.工单号,
+    name: item.申请人,
+    works: item.治具名称,
+    startdate:item.申请日期,
+    enddate:item.需求日期,
+  }));
   if (!data) {
     return {
       status: 404,
     };
   }
 
-
+console.log(data)
 ---
 <BaseLayout>
   <main class="grid grid-cols-1 sm:grid-cols-3 gap-2 px-2">
     
      {
-     data.map((data:any) => (<WorkCard data={data} />
+     filteredData.map((data:any) => (<WorkCard data={data} />
      ))}
 
     
@@ -46,4 +51,6 @@ export const GET: APIRoute = (data) => {
     }
   
 </style> -->
-
+<!-- 
+//1IUhdPTAzGZP3ijSUdKOjqAgB2kg-RkublJK16JjXiSk
+//1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU -->
