--- a/src/components/AutoWorkCard.astro
+++ b/src/components/AutoWorkCard.astro
@@ -1,13 +1,19 @@
 ---
 type Props = {
   data: {
+    week:string;
     workorder:string;
-    name: string;
+    requestor: string;
+    owner:string;
+    customer:string;
     works: string;
     startdate: Date;
     enddate: Date;
+    status:string;
   };
 };
+
+
 
 const { data } = Astro.props;
 
@@ -25,9 +31,13 @@ const cardStyle = (dayDifference < 3) || overdue ? 'bg-red-200' : 'bg-green-200'
 <div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300`}>
   <div class="title font-bold mb-2">申请人: {data.name}</div>
   <div>工单号码:{data.workorder}</div>
+  <div>week:{data.week}</div>
+  <div>需求者：{data.requestor}</div>
+  <div>客户： {data.customer}</div>
   <div>治具名称: {data.works}</div>
   <div>申请日期: {new Date(data.startdate).toLocaleDateString()}</div>
   <div>需求日期: {new Date(data.enddate).toLocaleDateString()}</div>
+  <div>状态：{data.status}</div>
 </div>
 
 <style>
