--- a/src/pages/ae.astro
+++ b/src/pages/ae.astro
@@ -28,10 +28,10 @@ const filteredData = data.filter((item:any) => item.完成状态==="未完成").
     };
   }
 
-console.log(data)
+// console.log(data)
 ---
 <BaseLayout>
-  <main class="grid grid-cols-1 sm:grid-cols-3 gap-2 px-2">
+  <main class="grid grid-cols-1 sm:grid-cols-5 gap-2 px-2">
     
      {
      filteredData.map((data:any) => (<WorkCard data={data} />
