--- a/src/pages/automatic.astro
+++ b/src/pages/automatic.astro
@@ -2,8 +2,9 @@
 import type { APIRoute } from "astro";
 import WorkCard from "../components/WorkCard.astro";
 import BaseLayout from "../layouts/BaseLayout.astro";
+import AutoWorkCard from "../components/AutoWorkCard.astro";
 
-const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/3"
+const response = await fetch("https://opensheet.elk.sh/1ge-pyzr0uMTxlALiiUh_sEzdVo1ikGJGavLF04u6AVU/5"
 );
 const data = await response.json();
 
@@ -17,19 +18,32 @@ export const GET: APIRoute = (data) => {
 };
 
 
+const filteredData = data.filter((item:any) => item.Status==="On Going"||item.Status==="Delay").map((item: any) => ({
+    week:item.week,
+    workorder:item.item,
+    requestor: item.Requester,
+    owner:item.Owner,
+    customer:item.Customer,
+    works: item.Actions,
+    startdate:item.StartDate,
+    enddate:item.DueDate,
+    status:item.Status,
+
+  }));
+
+  // console.log(filteredData);
+
   if (!data) {
     return {
       status: 404,
     };
   }
-
-
 ---
 <BaseLayout>
-  <main class="grid grid-cols-1 sm:grid-cols-3 gap-2 px-2">
+  <main class="grid grid-cols-1 sm:grid-cols-5 gap-2 px-2">
     
      {
-     data.map((data:any) => (<WorkCard data={data} />
+     filteredData.map((data:any) => (<AutoWorkCard data={data} />
      ))}
 
     
