--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -39,12 +39,11 @@ export const GET: APIRoute = (data) => {
         <li class="mb-2">
           <strong>实时状态更新:</strong> 实时跟踪工单的进展情况，确保所有相关人员及时了解最新状态。
         </li>
+        
         <li class="mb-2">
-          <strong>历史记录与报告:</strong> 访问工单的历史记录，生成详细的报告，帮助分析和改进工作流程。
+          <strong>记录与报告:</strong> 仅仅追踪“ Ongiing, Pending, Delay" 。OverDue，或 接近3天内的项目变色
         </li>
-        <li class="mb-2">
-          <strong>用户权限管理:</strong> 为不同用户分配不同的权限，确保数据安全和操作规范。
-        </li>
+        
       </ul>
     </div>
   </main>
