--- a/src/components/AutoWorkCard.astro
+++ b/src/components/AutoWorkCard.astro
@@ -29,7 +29,7 @@ const cardStyle = (dayDifference < 3) || overdue ? 'bg-red-200' : 'bg-green-200'
 ---
 
 <div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300`}>
-  <div class="title font-bold mb-2">申请人: {data.name}</div>
+  <div class="title font-bold mb-2">申请人: {data.requestor}</div>
   <div>工单号码:{data.workorder}</div>
   <div>week:{data.week}</div>
   <div>需求者：{data.requestor}</div>
