--- a/src/pages/ae.astro
+++ b/src/pages/ae.astro
@@ -31,7 +31,7 @@ const filteredData = data.filter((item:any) => item.完成状态==="未完成").
 // console.log(data)
 ---
 <BaseLayout>
-  <main class="grid grid-cols-1 sm:grid-cols-5 gap-2 px-2">
+  <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-2 px-2">
     
      {
      filteredData.map((data:any) => (<WorkCard data={data} />
