--- a/src/pages/automatic.astro
+++ b/src/pages/automatic.astro
@@ -40,7 +40,7 @@ const filteredData = data.filter((item:any) => item.Status==="On Going"||item.St
   }
 ---
 <BaseLayout>
-  <main class="grid grid-cols-1 sm:grid-cols-5 gap-2 px-2">
+  <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 xl:grid-cols-5 gap-2 px-2">
     
      {
      filteredData.map((data:any) => (<AutoWorkCard data={data} />
