--- a/src/components/AutoWorkCard.astro
+++ b/src/components/AutoWorkCard.astro
@@ -1,4 +1,5 @@
 ---
+import { Icon } from "astro-icon/components";
 type Props = {
   data: {
     week:string;
@@ -10,10 +11,9 @@ type Props = {
     startdate: Date;
     enddate: Date;
     status:string;
+    priority:string;
   };
 };
-
-
 
 const { data } = Astro.props;
 
@@ -21,17 +21,22 @@ const startDate = new Date(data.startdate);
 const endDate = new Date(data.enddate);
 const timeDifference = endDate.getTime() - startDate.getTime();
 const dayDifference = timeDifference / (1000 * 3600 * 24);
-const currentDate = new Date ();
+const currentDate = new Date();
 const overdue = endDate < currentDate;
 
-
 const cardStyle = (dayDifference < 3) || overdue ? 'bg-red-200' : 'bg-green-200'; // 使用 Tailwind 颜色类
+const showLogo = data.priority === "急"; // 判断是否显示 logo
 ---
 
-<div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300`}>
+<div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300 relative`}>
+  {showLogo && (
+    <div class="absolute top-0 right-0 m-2">
+      <Icon name="logo" size={80} class="color-icon"/>
+    </div>
+  )}
   <div class="title font-bold mb-2">申请人: {data.requestor}</div>
-  <div>工单号码:{data.workorder}</div>
-  <div>week:{data.week}</div>
+  <div>工单号码: {data.workorder}</div>
+  <div>week: {data.week}</div>
   <div>责任人：{data.owner}</div>
   <div>客户： {data.customer}</div>
   <div>任务: {data.works}</div>
@@ -48,10 +53,15 @@ const cardStyle = (dayDifference < 3) || overdue ? 'bg-red-200' : 'bg-green-200'
     margin: 10px;
     box-sizing: border-box;
     color: #000000;
+    position: relative;
   }
 
   .title {
     font-weight: bold;
     margin-bottom: 5px;
+  }
+
+  .color-icon {
+    color: red; /* 确保图标使用其原始颜色 */
   }
 </style>
