--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,7 +41,7 @@ export const GET: APIRoute = (data) => {
         </li>
         
         <li class="mb-2">
-          <strong>记录与报告:</strong> 仅仅追踪“ Ongiing, Pending, Delay" 。OverDue，或 接近3天内的项目变色
+          <strong>记录与报告:</strong> 仅仅追踪“ 未完成，Ongiing, Delay等状态" 。OverDue，或 接近3天内的项目变色追踪。“急” 只能添加“急”作为标识符。
         </li>
         
       </ul>
