--- a/src/components/AutoWorkCard.astro
+++ b/src/components/AutoWorkCard.astro
@@ -30,8 +30,8 @@ const showLogo = data.priority === "急"; // 判断是否显示 logo
 
 <div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300 relative`}>
   {showLogo && (
-    <div class="absolute top-0 right-0 m-2">
-      <Icon name="logo" size={80} class="color-icon"/>
+    <div class="absolute top-0 right-0 m-1">
+      <Icon name="logo" size={40}/>
     </div>
   )}
   <div class="title font-bold mb-2">申请人: {data.requestor}</div>
@@ -62,6 +62,6 @@ const showLogo = data.priority === "急"; // 判断是否显示 logo
   }
 
   .color-icon {
-    color: red; /* 确保图标使用其原始颜色 */
+    color: initial !important; /* 确保图标使用其原始颜色 */
   }
 </style>
