--- a/src/components/WorkCard.astro
+++ b/src/components/WorkCard.astro
@@ -7,6 +7,7 @@ type Props = {
     works: string;
     startdate: Date;
     enddate: Date;
+    priority:string;
   };
 };
 
@@ -21,9 +22,15 @@ const overdue = endDate < currentDate;
 
 
 const cardStyle = (dayDifference < 3) || overdue ? 'bg-red-200' : 'bg-green-200'; // 使用 Tailwind 颜色类
----
+const showLogo = data.priority === "急"; // 判断是否显示 logo
 
-<div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300`}>
+---
+<div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300 relative`}>
+  {showLogo && (
+    <div class="absolute top-0 right-0 m-1">
+      <Icon name="logo" size={40}/>
+    </div>
+  )}
   <div class="title font-bold mb-2">申请人: {data.name}</div>
   <div>工单号码:{data.workorder}</div>
   <div>治具名称: {data.works}</div>
