--- a/src/components/WorkCard.astro
+++ b/src/components/WorkCard.astro
@@ -26,16 +26,18 @@ const showLogo = data.priority === "急"; // 判断是否显示 logo
 
 ---
 <div class={`card ${cardStyle} shadow-md hover:shadow-xl transition-shadow duration-300 relative`}>
+  
   {showLogo && (
-    <div class="absolute top-0 right-0 m-1">
-      <Icon name="logo" size={40}/>
+    <div class="absolute top-0 right-0 m-1 logo-container">
+      <Icon name="logo23" size={80} class="text-red-500" />
     </div>
   )}
   <div class="title font-bold mb-2">申请人: {data.name}</div>
-  <div>工单号码:{data.workorder}</div>
-  <div>治具名称: {data.works}</div>
+  
   <div>申请日期: {new Date(data.startdate).toLocaleDateString()}</div>
   <div>需求日期: {new Date(data.enddate).toLocaleDateString()}</div>
+  <div>工单号码:{data.workorder}</div>
+  <div>治具名称: {data.works}</div>
 </div>
 
 <style>
@@ -51,5 +53,9 @@ const showLogo = data.priority === "急"; // 判断是否显示 logo
   .title {
     font-weight: bold;
     margin-bottom: 5px;
+  }
+
+  .logo-container {
+    background-color: transparent; /* 设置背景透明 */
   }
 </style>
