--- a/src/pages/auto.astro
+++ b/src/pages/auto.astro
@@ -17,7 +17,7 @@ export const GET: APIRoute = (data) => {
 };
 
 
-const filteredData = data.filter((item:any) => item.Status==="On Going"||item.Status==="Delay").map((item: any) => ({
+const filteredData = data.filter((item: any) => (item.Status === "On Going" || item.Status === "Delay") && item.Priority === "急").map((item: any) => ({
     week:item.week,
     workorder:item.item,
     requestor: item.Requester,
@@ -30,7 +30,23 @@ const filteredData = data.filter((item:any) => item.Status==="On Going"||item.St
     priority:item.Priority,
   }));
 
-  console.log(data);
+  const filteredData2 =  data.filter((item: any) => (item.Status === "On Going" || item.Status === "Delay") && item.Priority !== "急").map((item: any) => ({
+    week:item.week,
+    workorder:item.item,
+    requestor: item.Requester,
+    owner:item.Owner,
+    customer:item.Customer,
+    works: item.Actions,
+    startdate:item.StartDate,
+    enddate:item.DueDate,
+    status:item.Status,
+    priority:item.Priority,
+  }));
+
+
+
+
+  // console.log(data);
 
   if (!data) {
     return {
@@ -44,7 +60,9 @@ const filteredData = data.filter((item:any) => item.Status==="On Going"||item.St
      {
      filteredData.map((data:any) => (<AutoWorkCard data={data} />
      ))}
-
+ {
+  filteredData2.map((data2:any) => (<AutoWorkCard data={data2} />
+  ))}
     
    </main>
 </BaseLayout>
