--- a/src/components/WorkCard.astro
+++ b/src/components/WorkCard.astro
@@ -37,7 +37,7 @@ const showLogo = data.priority === "急"; // 判断是否显示 logo
   <div>申请日期: {new Date(data.startdate).toLocaleDateString()}</div>
   <div>需求日期: {new Date(data.enddate).toLocaleDateString()}</div>
   <div>工单号码:{data.workorder}</div>
-  <div>治具名称: {data.works}</div>
+  <div>任务内容: {data.works}</div>
 </div>
 
 <style>
